<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CacoRedes</string>
    <string name="action_settings">Configurações</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="error_device_id">Nenhum ID de dispositivo fornecido</string>
    <string name="prompt_email">Utilizador</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Faça login</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="invalid_username">Não é um nome de usuário válido</string>
    <string name="invalid_password">A senha deve ser &gt;5 caracteres</string>
    <string name="login_failed">Login falhado</string>
    <string name="qr">Código QR</string>
    <string name="logout">Desconectar</string>
    <string name="hello_blank_fragment">Olá, fragmento em branco</string>
    <string name="alert_delete_device">Eliminar Dispositivo</string>
    <string name="alert_delete_device_description">Você tem certeza de que quer deletar esse dispositivo?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="success_delete_device">Dispositivo excluído com sucesso</string>
    <string name="fail_delete_device">Falhou em deletar o dispositivo</string>
    <string name="error">Erro: {error}</string>
    <string name="label_vendor">Vendor: {value}</string>
    <string name="label_category">Categoria: {value}</string>
    <string name="label_type">Tipo: {value}</string>
    <string name="label_serial_number">Número de Série: {value}</string>
    <string name="label_mac_address">Endereço MAC: {value}</string>
    <string name="label_state">Estado: {value}</string>
    <string name="label_site_type">Tipo de Local: {value}</string>
    <string name="label_country">País: {value}</string>
    <string name="label_city">City: {value}</string>
    <string name="label_street">Rua: {value}</string>
    <string name="label_zip_code">Código CEP: {value}</string>
    <string name="title_device">Dispositivo</string>
    <string name="title_device_details">Detalhes do Dispositivo</string>
    <string name="title_site_information">Informação do Local</string>
    <string name="title_device_information">Informação do Dispositivo</string>
    <string name="title_connected_devices">Dispositivos Conectados</string>
    <string name="title_devices">Dispositivos</string>
    <string name="title_site">Local</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_login">Login</string>
    <string name="title_site_add_edit">Adicionar/Editar Local</string>
    <string name="title_qr_code">Código QR</string>
    <string name="button_register_new_device">Registar Dispositivo Novo</string>
    <string name="button_register_new_site">Registar Local Novo</string>
    <string name="edit">Editar</string>
    <string name="hint_vendor">Fornecedor *</string>
    <string name="hint_type">Tipo *</string>
    <string name="hint_category">Categoria *</string>
    <string name="hint_serial_number">Número de Série *</string>
    <string name="hint_mac_address">Endereço MAC *</string>
    <string name="hint_state">Estado *</string>
    <string name="hint_select_site">Selecionar Local *</string>
    <string name="hint_search_devices">Dispositivos de busca...</string>
    <string name="button_save_device">Guardar Dispositivo</string>
    <string name="label_selected_devices">Selecionado: {value} dispositivo(s)</string>
    <string name="hint_local_name">Nome Localização *</string>
    <string name="hint_country">País *</string>
    <string name="hint_address">Endereço</string>
    <string name="hint_street">Rua *</string>
    <string name="hint_city">Cidade *</string>
    <string name="hint_state_province">Estado/Província *</string>
    <string name="hint_zip_code">Código Postal *</string>
    <string name="hint_latitude">Latitude *</string>
    <string name="hint_longitude">Longitude *</string>
    <string name="save">Guardar</string>
    <string name="label_devices_at_this_site">Dispositivos neste Local</string>
    <string name="delete_site">Eliminar Local</string>
    <string name="delete_site_label">Tem a certeza que quer eliminar este local?</string>
    <string name="site_empty">Este local não tem dispositivos</string>
    <string name="loading">Carregando…</string>
    <string name="preparing_camera">Preparando a camera…</string>
    <string name="button_register_new_user">Adicionar utilizador</string>
    <string name="title_user_details">Detalhes do utilizador</string>
    <string name="title_user_information">Informação do utilizador</string>
    <string name="title_add_user">Adicionar Utilizador</string>
    <string name="title_edit_user">Editar Utilizador</string>
    <string name="hint_name">Nome</string>
    <string name="hint_email">Nome do utilizador</string>
    <string name="hint_password">Palavra-passe</string>
    <string name="hint_role">Função</string>
    <string name="helper_password_optional">Deixar em branco para manter a palavra-passe atual</string>
    <string name="error_name_required">O nome é obrigatório</string>
    <string name="error_email_required">O email é obrigatório</string>
    <string name="error_email_invalid">Por favor, introduza um endereço de email válido</string>
    <string name="error_password_required">A palavra-passe é obrigatória</string>
    <string name="error_password_length">A palavra-passe deve ter pelo menos 6 caracteres</string>
    <string name="error_role_required">Por favor, selecione uma função válida</string>
    <string name="success_user_created">Utilizador criado com sucesso</string>
    <string name="success_user_updated">Utilizador atualizado com sucesso</string>
    <string name="error_creating_user">Erro ao criar utilizador: %s</string>
    <string name="error_updating_user">Erro ao atualizar utilizador: %s</string>
    <string name="title_users">Utilizadores</string>
    <string name="privacy_policy">Politica de Privacidade</string>
    <string name="accessDenied">Acesso Negado</string>
    <string name="title_users_details">Detalhes do Utilizador</string>
    <string name="title_add_edit_user">Adicionar/Editar Utilizadores</string>

</resources>